Fixed center alignment on desktop only

--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -57,3 +57,10 @@ body
   
   60% 
     transform: translateY(-15px)
+@media screen and (min-width: 768px) 
+  .officer
+      position: relative
+      top: 50%
+      transform: translateY(-50%)
+.hero-foot
+  padding-bottom: 48px
