--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -33,6 +33,7 @@ body
   -moz-animation: bounce 2s infinite
   -webkit-animation: bounce 2s infinite
   animation: bounce 2s infinite
+
 @keyframes bounce 
   0%, 20%, 50%, 80%, 100% 
     transform: translateY(0)
@@ -42,3 +43,12 @@ body
   
   60% 
     transform: translateY(-15px)
+.social
+  text-align: center
+@media screen and (min-width: 768px) 
+  .social
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
+.hero-foot
+  padding-bottom: 48px
