--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -35,4 +35,6 @@ body
   
   60% 
     transform: translateY(-15px)
+.hero-foot
+  padding-bottom: 48px
   
