--- a/src/app/components/support-ncm/support-ncm.component.sass
+++ b/src/app/components/support-ncm/support-ncm.component.sass
@@ -1,2 +1,39 @@
 body
   font-family: 'Rubik', sans-serif
+.hero 
+  background-color: #99738e
+.title
+  color: white
+.hero
+  &.has-background
+    position: relative
+    overflow: hidden
+  &-background 
+    position: absolute
+    object-fit: cover
+    object-position: center center
+    width: 100%
+    height: 100%
+    &.is-transparent 
+      opacity: 0.3
+.hero-foot
+  text-align: center
+.fa-angle-down:hover
+  color: #d6d6d6
+.fa-angle-down
+  color: white
+  transition: 0.3s
+  -moz-animation: bounce 2s infinite
+  -webkit-animation: bounce 2s infinite
+  animation: bounce 2s infinite
+@keyframes bounce 
+  0%, 20%, 50%, 80%, 100% 
+    transform: translateY(0)
+  
+  40% 
+    transform: translateY(-30px)
+  
+  60% 
+    transform: translateY(-15px)
+.hero-foot
+  padding-bottom: 48px
